[gd_scene load_steps=3 format=3 uid="uid://d4hncbcyk7340"]

[ext_resource type="Theme" uid="uid://m6f2pnni01p5" path="res://resources/ui/theme.tres" id="1_2vh6u"]
[ext_resource type="Script" path="res://scripts/ui/menu_main.gd" id="2_ru3mg"]

[node name="MenuMain" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1000.0
offset_bottom = 1400.0
theme = ExtResource("1_2vh6u")
script = ExtResource("2_ru3mg")

[node name="Header" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -305.0
offset_top = 28.0
offset_right = 306.0
offset_bottom = 98.0
grow_horizontal = 2
bbcode_enabled = true
text = "[font_size=48][fill][b]THE POTATO PAPER[/b][/fill][/font_size]"
scroll_active = false

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 140.0
offset_right = -100.0
offset_bottom = -140.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -186.0
offset_right = 186.0
offset_bottom = 338.0
grow_horizontal = 2

[node name="NewGame" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 48
text = "New Game"
flat = true

[node name="Continue" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
text = "Continue"

[node name="Settings" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Settings
"

[node name="Quit" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Quit"

[connection signal="pressed" from="Control/VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
